Se agrego texto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Este es mi primer repositorio</h1>
+
+
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aperiam nihil, earum corporis dolorum cumque eligendi inventore, sequi possimus quisquam expedita vel, magnam reiciendis repudiandae cupiditate necessitatibus. Est, ut? Debitis iure sed accusantium voluptatem dolores nemo dolorem deserunt, magni consequuntur provident libero, veniam distinctio soluta nesciunt quis sequi odit ducimus!
+        </p>
+    </section>
     
 </body>
 </html>
