Se agregaron nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vero eius eligendi architecto, veritatis neque consectetur rem officia consequatur sint voluptatum unde tempore consequuntur eveniet blanditiis laboriosam ratione in at dolorem quo. Nostrum totam debitis, eligendi recusandae doloribus reprehenderit quas, cumque ipsum magni aliquam veniam soluta numquam incidunt quo quisquam amet quos magnam facere sapiente modi porro, excepturi earum eius nulla? Soluta assumenda impedit, dolorum adipisci nesciunt, ad repellendus enim atque accusantium, quisquam cumque est nulla accusamus voluptatum? Perspiciatis excepturi non deleniti quos, totam eum aspernatur officia a molestiae debitis qui eos dolorem illo repellendus obcaecati temporibus perferendis ex commodi.
     </p>
-    
+    <img src="https://picsum.photos/200/300" alt="">
+    <img src="https://picsum.photos/200/300" alt="">
 </body>
 </html>
