--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
     </p>
     <img src="https://picsum.photos/200/300" alt="">
     <img src="https://picsum.photos/200/300" alt="">
+
+    <button>Click here</button>
 </body>
 </html>
